Formatting and naming cleanup